# Robot-Marketplace-and-Remote-Control-System

./: .env.example  .gitignore  README.md  README2.md  docker-compose.yml  fix_db.py  fix_db2.txt  init_catalog.py  migrations.sql  rapor.doc  requirements.txt  robot_db_schema.sql  sql_commands.txt
app/: Dockerfile  database.py  main.py  main.py.bak  notlar
app/core/: config.py  dependencies.py  limiter.py  security.py
app/models/: audit.py  report.py  robot.py  shop.py  user.py
app/routers/: admin.py  auth.py  cart.py  orders.py  products.py  reports.py  robots.py  ros_dashboard.py  ros_dashboard.py.bak  user_robot.py  users.py
app/schemas/: auth.py  cart.py  order.py  product.py  report.py  robot.py  user.py
frontend/sat-proje/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/sat-proje/src/: App.css  App.jsx
frontend/sat-proje/src/AdminPage/: Admin.css  AdminIstatistikPage.jsx  AdminLayout.jsx  AdminLoginPage.jsx  AdminProtectedRoute.jsx  AdminReportsPage.jsx  AdminRobotAddPage.jsx  AdminRobotEditPage.jsx  AdminRobotInfoPage.jsx  AdminRobotsPage.jsx  AdminUserInfoPage.jsx  AdminUsersPage.jsx  adminApi.js
frontend/sat-proje/src/CartPage/: CartPage.jsx
frontend/sat-proje/src/CheckoutPage/: CheckoutPage.jsx
frontend/sat-proje/src/ControlPage/: ControlPanelPage.jsx  ControlSelectionPage.jsx
frontend/sat-proje/src/LandingPage/: LandingPage.jsx
frontend/sat-proje/src/LoginPage/: ForgotPasswordPage.jsx  LoginPage.jsx  ResetPasswordPage.jsx
frontend/sat-proje/src/MyRobotsPage/: ActivateRobotPage.jsx  MyRobotsPage.jsx  RobotInfoPage.jsx
frontend/sat-proje/src/RegisterPage/: RegisterForm.jsx  RegisterPage.jsx
frontend/sat-proje/src/ShopPage/: RobotDetailPage.jsx  ShopPage.jsx
frontend/sat-proje/src/UserPage/: OrderDetailsPage.jsx  OrdersPage.jsx  ProfilePage.jsx  ReportsPage.jsx  UserPage.jsx
frontend/sat-proje/src/api/: rosApi.js  userApi.js
frontend/sat-proje/src/auth/: mockSession.js  session.js
frontend/sat-proje/src/components/product/: RobotFeatures.jsx  RobotHero.jsx  RobotPackages.jsx  StickySubNav.jsx  TechSpecs.jsx
frontend/sat-proje/src/context/: CartContext.jsx  RobotContext.jsx
ros_integration/: README.md  ros_web_integration_prototype.py
ros_integration/robot_spawner/: CMakeLists.txt
ros_integration/robot_spawner/config/: params.yaml
ros_integration/robot_spawner/include/robot_spawner/: RobotController.hpp
ros_integration/robot_spawner/models/burger/: model-1_4.sdf  model.sdf
ros_integration/robot_spawner/models/waffle/: model-1_4.sdf
ros_integration/robot_spawner/scripts/: robot_spawner_node.py
ros_integration/robot_spawner/src/: RobotController.cpp  RobotController_node.cpp
ros_integration/rosbridge_suite/rosbridge_server/: package.xml
ros_integration/rosbridge_suite/rosbridge_server/launch/: rosbridge_endpoints_launch.xml
ros_integration/src/robot_spawner/: package.xml
ros_integration/src/robot_spawner/config/: params.yaml
ros_integration/src/robot_spawner/launch/: robot_spawner.launch.py
ros_integration/src/robot_spawner/models/burger/: model.sdf
ros_integration/src/robot_spawner/models/waffle/: model.sdf
ros_integration/src/robot_spawner/scripts/: robot_spawner_node.py
ros_integration/src/rosbridge_suite/rosapi/src/rosapi/: objectutils.py  params.py
ros_integration/src/rosbridge_suite/rosbridge_library/src/rosbridge_library/: capability.py  protocol.py  rosbridge_protocol.py
ros_integration/src/rosbridge_suite/rosbridge_server/: CMakeLists.txt
ros_integration/src/rosbridge_suite/rosbridge_server/launch/: rosbridge_endpoints_launch.xml
ros_integration/src/rosbridge_suite/rosbridge_server/src/rosbridge_server/: websocket_handler.py
ros_integration/src/rosbridge_suite/rosbridge_server/test/websocket/: advertise_action.test.py  advertise_action_feedback.test.py  advertise_service.test.py  call_service.test.py  (+9 more)
ros_integration/src/turtlebot3_gazebo/: CMakeLists.txt
ros_integration/src/turtlebot3_gazebo/launch/: turtlebot3_world.launch.py
ros_integration/src/turtlebot3_gazebo/models/turtlebot3_waffle/: model-1_4.sdf
ros_integration/src/turtlebot3_gazebo/worlds/: turtlebot3_house.world
ros_integration/src/web_ros_custom_msgs/: package.xml
ros_integration/src/web_ros_custom_msgs/msg/: AuthorizedTwist.msg
ros_integration/turtlebot3_gazebo/launch/: turtlebot3_world.launch.py
ros_integration/web_ros_custom_msgs/: CMakeLists.txt  package.xml
screenshots/: README.md
scripts/: ban_malicious_ips.sh
(+22 files in other folders)
